--- a/my-azure-project/.gitignore
+++ b/my-azure-project/.gitignore
@@ -351,3 +351,9 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# GitHub Actions specific ignores
+.github/workflows/*.log
+
+# Pulumi specific ignores
+Pulumi.*.yaml.bak
